# traquitanas

./: .editorconfig  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  codes.ipynb  install.yaml  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-conda.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  wiki.yml
conda/: GetChannels.py  meta.yaml
scripts/: addresses.ipynb  codes.ipynb  nomes.ipynb  selenium.ipynb  selenium_main.py
src/: traquitanas.py
src/geo/: converts.py
src/gerador/: traquitana.py
src/traquitanas/: __init__.py  classify_name.py  utils.py
src/traquitanas/geo/: converts.py  layers.py
src/traquitanas/gerador/: traquitana.py
src/traquitanas/net/: downloads.py  scraping.py  ssss.py
src/traquitanas/numbers/: numbers.py
test/: codes.ipynb
tests/: codes.ipynb  numeros_romanos.ipynb
traquitanas/: README.md  __init__.py  gerador_endereco.py  personal.py  utils.py
traquitanas/data/: convert_to_sql.py
traquitanas/enderecos/: README.md  gerador_endereco.py
traquitanas/files/: utils.py
traquitanas/geo/: converts.py  layers.py
traquitanas/net/: downloads.py  gecko.py  scraping.py  ssss.py
traquitanas/numbers/: numbers.py
traquitanas/pessoas/: personal.py
traquitanas/scrapping/: adds.py  gecko.py  paths.py  scrapping.py
wiki/: Home.md  Pessoas.md  Scrapping.md  Utils.md  _Footer.md  _Sidebar.md
